[tool.poetry]
name = "save_image_from_clipboard"
version = "1.0.0"
description = "Save image from X11 clipboard as desired output format."
authors = ["Charl P. Botha (X1E) <cpbotha@vxlabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/cpbotha/save_image_from_clipboard"
repository = "https://github.com/cpbotha/save_image_from_clipboard"
keywords = ["x11", "xclip", "imagemagick", "python"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Desktop Environment",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
save_image_from_clipboard = 'save_image_from_clipboard:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
# change black's default from 88 characters to 120 characters
line-length = 120